[metadata]
name = hls4ml-ipbb
version = 0.0.1
author = Maksymilian Graczyk (CERN)
description = An automatic ipbb wrapper package for hls4ml IPs

[options]
package_dir =
    = .
packages =
   hls4ml_ipbb
python_requires = >=3.6
install_requires =
   defusedxml==0.7.1

[options.entry_points]
console_scripts =
   ipbb_convert = ipbb_convert:main